# py-cdhit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: sphinx.yml
docs/: conf.py  index.md  installation.md  requirements.txt
docs/examples/: apd.fasta  examples.ipynb
pycdhit/: __init__.py  _class.py  _commands.py  _io.py
tests/: test_class.py  test_commands.py  test_io.py
